force-app/main/default/objects/ActionPlanTask__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>ActionPlan__c</referenceTo>
    <relationshipName>ActionPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>