force-app/main/default/objects/ActionPlanTask__c/fields/APTaskTemplate__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTask__c</fullName>
    <label>Task Dependency</label>
    <referenceTo>ActionPlanTask__c</referenceTo>
    <relationshipLabel>AP Tasks</relationshipLabel>
    <relationshipName>R00NR0000000VcWbMAK</relationshipName>
    <type>Lookup</type>
</CustomField>