force-app/main/default/objects/ActionPlanTask__c/fields/DaysFromStart__c.field-meta.xml
<CustomField>
    <fullName>DaysFromStart__c</fullName>
    <label>Days Before/After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>