force-app/main/default/objects/ActionPlanTask__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject_toDelete</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>