force-app/main/default/objects/ActionPlanTask__c/fields/taskIndex__c.field-meta.xml
<CustomField>
    <fullName>taskIndex__c</fullName>
    <label>taskIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>