force-app/main/default/objects/ActionPlanTask__c/fields/Time_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Time_Reminder__c</fullName>
    <formula>IF(Reminder__c ,IF(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12) == 0,&#39;12&#39;,TEXT(MOD(FLOOR(VALUE(Minutes_Reminder__c) / 60),12))) &amp; &#39;:&#39; &amp; IF(MOD(VALUE(Minutes_Reminder__c) ,60)==0,&#39;00&#39;,TEXT(MOD(VALUE(Minutes_Reminder__c) ,60)))+&#39; &#39;+ IF( VALUE(Minutes_Reminder__c)&gt;=720, &#39;PM&#39;,&#39;AM&#39;),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reminder</label>
    <type>Text</type>
</CustomField>